; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/bt8xx/extr_bttv-driver.c_is_active.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/bt8xx/extr_bttv-driver.c_is_active.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btcx_riscmem = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.btcx_riscmem*, i64)* @is_active to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_active(%struct.btcx_riscmem* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.btcx_riscmem*, align 8
  %5 = alloca i64, align 8
  store %struct.btcx_riscmem* %0, %struct.btcx_riscmem** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.btcx_riscmem*, %struct.btcx_riscmem** %4, align 8
  %8 = getelementptr inbounds %struct.btcx_riscmem, %struct.btcx_riscmem* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp slt i64 %6, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

12:                                               ; preds = %2
  %13 = load i64, i64* %5, align 8
  %14 = load %struct.btcx_riscmem*, %struct.btcx_riscmem** %4, align 8
  %15 = getelementptr inbounds %struct.btcx_riscmem, %struct.btcx_riscmem* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.btcx_riscmem*, %struct.btcx_riscmem** %4, align 8
  %18 = getelementptr inbounds %struct.btcx_riscmem, %struct.btcx_riscmem* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = add nsw i64 %16, %19
  %21 = icmp sgt i64 %13, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %24

23:                                               ; preds = %12
  store i32 1, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %22, %11
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
